--- a/bikes-share.ipynb
+++ b/bikes-share.ipynb
@@ -219,8 +219,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "f3b59ee5-a254-4e2f-96bd-fc4e3a21399d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>season</th>\n",
+       "      <th>mnth</th>\n",
+       "      <th>holiday</th>\n",
+       "      <th>weekday</th>\n",
+       "      <th>workingday</th>\n",
+       "      <th>weathersit</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>hum</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>rentals</th>\n",
+       "      <th>difference_temp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.344167</td>\n",
+       "      <td>0.805833</td>\n",
+       "      <td>0.160446</td>\n",
+       "      <td>331</td>\n",
+       "      <td>0.056537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.363478</td>\n",
+       "      <td>0.696087</td>\n",
+       "      <td>0.248539</td>\n",
+       "      <td>131</td>\n",
+       "      <td>-0.026794</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.196364</td>\n",
+       "      <td>0.437273</td>\n",
+       "      <td>0.248309</td>\n",
+       "      <td>120</td>\n",
+       "      <td>-0.035439</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>0.590435</td>\n",
+       "      <td>0.160296</td>\n",
+       "      <td>108</td>\n",
+       "      <td>0.060610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.226957</td>\n",
+       "      <td>0.436957</td>\n",
+       "      <td>0.186900</td>\n",
+       "      <td>82</td>\n",
+       "      <td>0.010191</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   season  mnth  holiday  weekday  workingday  weathersit      temp       hum  \\\n",
+       "0       1     1        0        6           0           2  0.344167  0.805833   \n",
+       "1       1     1        0        0           0           2  0.363478  0.696087   \n",
+       "2       1     1        0        1           1           1  0.196364  0.437273   \n",
+       "3       1     1        0        2           1           1  0.200000  0.590435   \n",
+       "4       1     1        0        3           1           1  0.226957  0.436957   \n",
+       "\n",
+       "   windspeed  rentals  difference_temp  \n",
+       "0   0.160446      331         0.056537  \n",
+       "1   0.248539      131        -0.026794  \n",
+       "2   0.248309      120        -0.035439  \n",
+       "3   0.160296      108         0.060610  \n",
+       "4   0.186900       82         0.010191  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bike_data = bike_data_raw.copy()\n",
+    "bike_data['difference_temp'] = (bike_data['atemp'] - bike_data['temp'])/bike_data['temp']\n",
+    "bike_data.drop(['instant', 'dteday', 'yr', 'atemp'], axis=1, inplace=True)\n",
+    "bike_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f668eae5-0852-46bf-a726-e83eebbba3be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numeric_features = ['temp', 'atemp', 'hum', 'windspeed']\n",
+    "categorical_features = ['season', 'mnth', 'holiday', 'weekday', 'workingday', 'weathersit']\n",
+    "target = 'rentals'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47ba48f7-4b59-4a3b-bf71-626372e3282f",
    "metadata": {},
    "outputs": [],
    "source": []
