--- a/bikes-share.ipynb
+++ b/bikes-share.ipynb
@@ -406,9 +406,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "42808e5b-955b-4a0e-aa5c-6efbac80df7a",
+   "metadata": {},
+   "source": [
+    "#### Create training and test dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "94e5d4b7-1b53-4502-ab9d-582e3b854a3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X.shape: (731,), y.shape: (731,)\n",
+      "X_train.shape: (584,), y_train.shape: (584,)\n",
+      "X_test.shape: (147,), y_test.shape: (147,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, shuffle=False)\n",
+    "print(f\"X.shape: {X.shape}, y.shape: {y.shape}\")\n",
+    "print(f\"X_train.shape: {X_train.shape}, y_train.shape: {y_train.shape}\")\n",
+    "print(f\"X_test.shape: {X_test.shape}, y_test.shape: {y_test.shape}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e497f1f-4ecb-4a1d-ba4c-45a11d0f9b42",
+   "id": "658a4e15-b6af-48a9-9209-a2f6f624b5b7",
    "metadata": {},
    "outputs": [],
    "source": []
